@@ -3,6 +3,16 @@
 	* erc-backend.el (erc-server-send-ping): Move after definition of
 	erc-server-send.
 
+	* erc.el (iswitchb-temp-buflist, iswitchb-read-buffer)
+	(erc-controls-strip): Declare for compiler.
+	(erc-iswitchb): Don't require iswitchb when compiling.  Test
+	iswitchb-mode is bound.
+
+2007-11-30  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* erc.el (open-ssl-stream, open-tls-stream, erc-network-name):
+	Declare as functions.
+
 2007-11-29  Giorgos Keramidas  <keramida@ceid.upatras.gr>  (tiny change)
 
 	* erc-backend.el, erc.el:
